Update slnx, central package management, NuGet dependencies

--- a/src/dotnet-releaser.toml
+++ b/src/dotnet-releaser.toml
@@ -1,5 +1,5 @@
 [msbuild]
-project = ["Tomlyn.sln", "Tomlyn.Signed/Tomlyn.Signed.csproj"]
+project = ["Tomlyn.slnx", "Tomlyn.Signed/Tomlyn.Signed.csproj"]
 [github]
 user = "xoofx"
 repo = "Tomlyn"
