--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,10 @@ on:
   pull_request:
 
 jobs:
-  multi:
-    uses: xoofx/.github/.github/workflows/dotnet-multi.yml@main
-    with:
-      dotnet-version: '8.0'
-    secrets:
-      NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
+  build:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: "Build, Test, Pack and Publish"
+        uses: xoofx/.github/.github/actions/dotnet-releaser-action@main
+        with:
+          NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
