--- a/src/Tomlyn.Benchmarks/Tomlyn.Benchmarks/Tomlyn.Benchmarks.csproj
+++ b/src/Tomlyn.Benchmarks/Tomlyn.Benchmarks/Tomlyn.Benchmarks.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+      <PackageReference Include="BenchmarkDotNet" />
     </ItemGroup>
 
     <ItemGroup>
