--- a/src/Tomlyn/Tomlyn.props
+++ b/src/Tomlyn/Tomlyn.props
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-
     <LangVersion>latest</LangVersion>
     <Description>Tomlyn is a TOML parser, validator and authoring library for .NET.</Description>
     <Copyright>Alexandre Mutel</Copyright>
@@ -27,21 +26,19 @@
 
   <ItemGroup>
     <None Include="../../img/logo.png" Pack="true" PackagePath="" />
-    <None Include="../../readme.md" Pack="true" PackagePath="/"/>
+    <None Include="../../readme.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MinVer" Version="6.0.0">
+    <PackageReference Include="MinVer">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <!--Add support for sourcelink-->
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.*" PrivateAssets="All" />
     <!--Polyfill language features for .NET Standard 2.0 et all, generating internal
         items only for the compiler. Enables langversion=latest-->
-    <PackageReference Include="PolySharp" Version="1.*">
+    <PackageReference Include="PolySharp">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
